refactor: ShuffleGenerator unmofidiableList -> List.copyOf