@@ -4,7 +4,6 @@ import static java.util.Collections.*;
 import static lotto.model.Lotto.*;
 import static lotto.model.LottoNumber.*;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -17,7 +16,7 @@ public class ShuffleGenerator implements LottoNumberGenerator {
         shuffle(sequentialIntegers);
         List<Integer> lottoNumbers = sequentialIntegers.subList(0, LOTTO_SIZE);
         sort(lottoNumbers);
-        return Collections.unmodifiableList(lottoNumbers);
+        return List.copyOf(lottoNumbers);
     }
 
     private List<Integer> generateSequentialIntegers() {
